[package]
name = "lilos"
version = "1.0.0-pre.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A tiny embedded OS based around Futures and async."
repository = "https://github.com/cbiffle/lilos/"
keywords = ["async", "embedded", "realtime", "os"]
categories = ["embedded"]
readme = "README.mkdn"

[package.metadata.docs.rs]
all-features = true
default-target = "thumbv7em-none-eabihf"

[features]
default = ["mutex", "spsc", "systick"]
mutex = []
spsc = []
systick = []
handoff = ["scopeguard"]
portable-atomic = ["dep:portable-atomic"]

[dependencies]
cfg-if = "1.0.0"
pin-project-lite = "0.2.10"
scopeguard = { version = "1.1.0", default-features = false, optional = true }
portable-atomic = { version = "1", default-features = false, optional = true, features = ["unsafe-assume-single-core"] }

[target.thumbv6m-none-eabi.dependencies]
cortex-m = {version = "0.7.4", features = ["inline-asm"]}
cortex-m-rt = "0.7.1"

[lib]
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
